/**
 * @file ObjectMsg.hpp
 * @author David Gitz (davidgitz@gmail.com)
 * @brief
 * @version 0.1
 * @date 2026-06-24
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once
/**
 * @brief Awareness Messages Namespace
 *
 */
namespace fast::rf::messages::AwarenessMsgs {
/**
 * @brief Data Structure to encode Object Data
 *
 */
struct ObjectMsg {
  ObjectMsg() {}
};
} // namespace fast::rf::messages::AwarenessMsgs
