@startuml
title Awareness Msgs Class Diagram

namespace fast::rf::messages {
  namespace GeometryMsgs {
    class OdomMsg <<(M,#FFFF00) >>
  }
  namespace AwarenessMsgs {
  
    class ObjectMsg <<(M,#FFFF00) >> {

    }
    ObjectMsg --> OdomMsg: <<use>>
    class ObjectListMsg <<(M,#FFFF00) >> {

    }
    ObjectListMsg --> ObjectMsg: <<use>>
    
  }
}
@enduml